fixed overlapping between search results and footer on search/index.js

--- a/src/components/pages/search/style.scss
+++ b/src/components/pages/search/style.scss
@@ -71,6 +71,10 @@
     }
   }
 
+  .results-footer {
+    margin-top: 80px;
+  }
+
   .search--search-container {
     display: flex;
     height: 150px;
